src/App.css
.App {
  text-align: center;
}

.App-logo {
  height: 40vmin;
  pointer-events: none;
}

@media (prefers-reduced-motion: no-preference) {
  .App-logo {
    animation: App-logo-spin infinite 20s linear;
  }
}

.App-header {
  background-color: #282c34;
  min-height: 100vh;
  display: flex;
  flex-direction: column;
  align-items: center;
  padding-top: 25vh;
  font-size: calc(10px + 2vmin);
  color: white;
}

.App-link {
  color: #61dafb;
}

@keyframes App-logo-spin {
  from {
    transform: rotate(0deg);
  }
  to {
    transform: rotate(360deg);
  }
}

.margin-right {
  margin-right: 10px;
}

.margin-bottom {
  margin-bottom: 10px;
}

.option-button {
  display: block;
  margin-bottom: 5px;
}

.show-options-button {
  min-width: 100px;
}

.option-label {
  display: block;
  font-size: 13.3333px;
}

.option-label-above {
  display: block;
  font-size: 13.3333px;
  margin-bottom: 5px;
}

.align-right {
  display: flex;
  flex-direction: column;
  align-items: flex-end;
}

.ruleset-select {
  display: block;
}

.ruleset-input {
  max-width: 40px;
  margin-left: 5px;
}

.pile-set {
  margin-bottom: 10px;
}

.pile {
  margin: 5px;
  min-width: 200px;
  border: 1px solid white;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
}

.pile-on-fire {
  margin: 5px;
  min-width: 200px;
  border: 1px solid white;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  background-color: darkorange;
}

.pile-destroyed {
  margin: 5px;
  min-width: 200px;
  border: 1px solid white;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  background-color: darkred;
}

.flex-center {
  display: flex;
  align-items: center;
  justify-content: center;
}

.half-width {
  width: 50%
}

.start-text {
  font-size: 36px;
}

.direction-text {
  display: flex;
  align-items: center;
  justify-content: center;
  margin: 5px 0px;
  font-size: 18px;
}

.hand {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  min-height: 80px;
  margin-bottom: 10px;
}

.card {
  margin: 5px;
  min-width: 80px;
  border: 1px solid white;
  font-size: 24px;
}

.card-on-fire {
  margin: 5px;
  min-width: 80px;
  border: 1px solid white;
  font-size: 24px;
  background-color: dodgerblue;
}

